--- a/config.toml
+++ b/config.toml
@@ -32,3 +32,8 @@ enableRobotsTXT = true
   background_color_class = "bg-black"
   featured_image = "/img/header.png"
   recent_posts_number = 6
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
